syntax = "proto3";

package celinlim.interstaking;

import "cosmos/staking/v1beta1/staking.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

import "celinium/interstaking/source_chain.proto";

option go_package = "celinium/x/inter-staking/types";

service Msg {
    rpc AddSourceChain(MsgAddSourceChain) returns (MsgAddSourceChainResponse);

    rpc UpdateSourceChainDelegatePlan(MsgUpdateSourceChainDelegatePlan) returns (MsgUpdateSourceChainDelegatePlanResponse);

    rpc Delegate(MsgDelegate) returns(MsgDelegateResponse);

    rpc Undelegate(MsgUnDelegate) returns(MsgUnDelegateResponse);

    rpc NotifyUnDelegationDone(MsgNotifyUnDelegationDone) returns(MsgNotifyDelegationDoneResponse);
}

message MsgAddSourceChain{
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string chain_id = 1;
    string connection_id = 2;
    string channel_id = 3;
    string version = 4;
    string sourceChainDenom = 5;
    string sourceChainTraceDenom = 6;

    repeated DelegationStrategy delegate_strategy = 7 [(gogoproto.nullable) = false];

    // authority is the address that controls the module (defaults to x/gov unless overwritten).
    string authority = 8 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgAddSourceChainResponse {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string  interchain_account = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgUpdateSourceChainDelegatePlan {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string chain_id = 1;

    repeated DelegationStrategy delegate_strategy = 2 [(gogoproto.nullable) = false];

    // authority is the address that controls the module (defaults to x/gov unless overwritten).
    string authority = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgUpdateSourceChainDelegatePlanResponse {}

message MsgDelegate{
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string chain_id = 1;

    cosmos.base.v1beta1.Coin Coin = 2 [(gogoproto.nullable) = false];   

    string delegator = 3;
}

message MsgDelegateResponse{}

message MsgUnDelegate{
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string chain_id = 1;

    cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];   

    string signer = 3;
}

message MsgUnDelegateResponse{}

message MsgNotifyUnDelegationDone{
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string chain_id = 1;

    uint32 block_height = 2;
    
    uint64 unbounding_id = 3;

    bytes proof_init = 4;

    google.protobuf.Any unbonding_delegation = 5;

    string signer = 6;
}

message MsgNotifyDelegationDoneResponse{}
